UI changes to media cards

--- a/templates/email-template.html
+++ b/templates/email-template.html
@@ -174,8 +174,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-sm-1 right-aligned">
-                </div>
+                <div class="col col-sm-1"></div>
             </div>
         </div>
     </a>
