--- a/templates/providers.html
+++ b/templates/providers.html
@@ -90,6 +90,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col col-sm-1"></div>
             </div>
         </div>
     </a>
