Moved password validation to its own file

--- a/templates/login.html
+++ b/templates/login.html
@@ -45,11 +45,13 @@
 
                 <button class="btn ss-button login-button mb-2">Login</button>
 
-                <div class="small-text">
-                    New to StreamSearch? <a href="/signup">Sign up</a>
-                </div>
-                <div class="small-text mb-2">
-                    Forgot your password? <a href="/forgot-password">Reset it here</a>
+                <div class="my-2">
+                    <div class="small-text">
+                        New to StreamSearch? <a href="/signup">Sign up</a>
+                    </div>
+                    <div class="small-text">
+                        Forgot your password? <a href="/forgot-password">Reset it here</a>
+                    </div>
                 </div>
 
                 <div class="separator">
