--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -2,20 +2,7 @@
 
 {% block content_headered %}
 
-<script>
-
-    // Function to check Whether both passwords
-    // is same or not.
-    function checkPassword(form) {
-        password1 = form.password.value;
-        password2 = form.password_copy.value;
-
-        if(password1 != password2) {
-            alert ("Passwords do not match.")
-            return false;
-        }
-    }
-</script>
+<script src="/static/js/passwords-same.js"></script>
 
 <h2 class="centered mt-5 mb-4">
     Reset your password
@@ -41,7 +28,7 @@
             <div class="col-md-2"></div>
             <div class="alert alert-success alert-dismissible fade show col-md">
                 You're all set! Your password has been reset successfully. Click
-                <a href="{{url_for('forgot_password')}}">here</a> to login with
+                <a href="{{url_for('login')}}">here</a> to login with
                 your new password.
                 <button type="button" class="btn-close" data-dismiss="alert"></button>
             </div>
@@ -53,12 +40,12 @@
     <div class="login-card mt-3">
         <div class="login-card-content">
             <!-- Posting to same page so we have access to token in function `reset_password`. -->
-            <form method="POST" action="" oninput='password_copy.setCustomValidity(password_copy.value != password.value ? "Passwords do not match." : "")'>
+            <form method="POST" action="" oninput='passwordsSame();'>
                 <div class="input-group mx-auto mb-3" style="width: 15rem;">
                     <input type="password" name="password" class="form-control textbox-rounded" placeholder="New password">
                 </div>
                 <div class="input-group mx-auto mb-3" style="width: 15rem;">
-                    <input type="password" name="password_copy" class="form-control textbox-rounded" placeholder="Retype new password">
+                    <input type="password" name="password_confirm" class="form-control textbox-rounded" placeholder="Retype new password">
                 </div>
                 <button class="btn ss-button login-button">
                     Submit
