--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,47 @@
-{% extends "base.html" %}
+{% extends "base-headered-no-navbar.html" %}
 
 {% block content %}
+<h2 class="centered mt-5 mb-4">
+    Forgot your password? No worries, we've got you covered!
+</h2>
+
+<div class="centered">
+    {% if msg %}
+    <div class="container centered mt-3">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="alert alert-success alert-dismissible fade show col-md">
+                {{msg}}
+                <button type="button" class="btn-close" data-dismiss="alert"></button>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+    {% endif %}
+
+    <div class="login-card mt-3">
+        <div class="login-card-content">
+            <form method="POST" action="/signup">
+                <div class="input-group mx-auto mb-3" style="width: 15rem;">
+                    <input type="text" name="name" class="form-control textbox-rounded" placeholder="Name" autofocus>
+                </div>
+                <div class="input-group mx-auto mb-3" style="width: 15rem;">
+                    <input type="email" name="email" class="form-control textbox-rounded" placeholder="Email">
+                </div>
+                <div class="input-group mx-auto mb-3" style="width: 15rem;">
+                    <input type="password" name="password" class="form-control textbox-rounded" placeholder="New password">
+                </div>
+                <div class="input-group mx-auto mb-3" style="width: 15rem;">
+                    <input type="password" name="password_copy" class="form-control textbox-rounded" placeholder="Retype new password">
+                </div>
+                <button class="btn ss-button login-button">
+                    Submit
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="column is-4 is-offset-4">
     <h3 class="title">Sign Up</h3>
     <div class="box">
