--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,7 +28,7 @@
     <div class="container centered mt-3">
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="alert alert-success alert-dismissible fade show col-md">
+            <div class="alert alert-danger alert-dismissible fade show col-md">
                 {{error_msg}}
             </div>
             <div class="col-md-2"></div>
