--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,87 @@
 {% extends "base-headered.html" %}
 
 {% block content_headered %}
-Hey there!
+
+<h2 class="centered secondary-color mt-5 mb-4">
+    Why StreamSearch?
+</h2>
+
+<div class="justified large-text mb-5">
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md">
+                <p>
+                    Our mission is simple: to make it easier for people to find
+                    and enjoy their favorite content. With the ever-increasing
+                    number of streaming providers, it can be frustrating and
+                    time-consuming to find a particular movie or TV show.
+                    StreamSearch solves this problem by providing a centralized
+                    solution that allows users to search for content across
+                    multiple streaming services in one place. With StreamSearch,
+                    you can spend less time searching and more time enjoying
+                    your favorite movies and TV shows.
+                </p>
+                <p>
+                    But that's not all. StreamSearch also offers a personalized
+                    recommendation system that generates recommendations for
+                    movies and TV shows across streaming services. Our
+                    recommendation system is agnostic to streaming providers,
+                    meaning that you can receive recommendations for content
+                    that's available on multiple platforms. This gives you a
+                    broader range of options to choose from and helps you
+                    discover new content that you might not have found
+                    otherwise.
+                </p>
+                <p>
+                    Thank you for choosing StreamSearch. We hope you enjoy using
+                    our product as much as we enjoy building it!
+                </p>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<h2 class="centered secondary-color mt-5 mb-4">
+    Meet the team!
+</h2>
+
+<div class="centered large-text">
+    We are graduate students in the Master of Computer Science program at the
+    University of California, Irvine.
+
+<div class="container mt-3" style="padding-bottom: 5rem;">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2">
+            <div class="p-4">
+                <img src="/static/team/nikhil.png" width="100%">
+            </div>
+            Nikhil Kumar
+        </div>
+        <div class="col-md-2">
+            <div class="p-4">
+                <img src="/static/team/adith.png" width="100%">
+            </div>
+            Adith Bharadwaj
+        </div>
+        <div class="col-md-2">
+            <div class="p-4">
+                <img src="/static/team/karthik.png" width="100%">
+            </div>
+            Karthik Murali
+        </div>
+        <div class="col-md-2">
+            <div class="p-4">
+                <img src="/static/team/bhagya.png" width="100%">
+            </div>
+            Bhagya K
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+
 {% endblock %}
